--- a/writing/Cubert/greg.bib
+++ b/writing/Cubert/greg.bib
@@ -2,12 +2,22 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Greg Scontras at 2015-05-05 11:37:21 -0700 
+%% Created for Greg Scontras at 2015-05-12 09:28:01 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{lassitergoodman2015,
+	Author = {Daniel Lassiter and Noah D. Goodman},
+	Date-Added = {2015-05-12 16:27:23 +0000},
+	Date-Modified = {2015-05-12 16:28:01 +0000},
+	Journal = {Cognition},
+	Pages = {123-134},
+	Title = {How many kinds of reasoning? Inference, probability, and natural language semantics},
+	Volume = {136},
+	Year = {2015}}
 
 @webpage{davies2011,
 	Author = {Mark Davies},
