added representation discussion

--- a/writing/Cubert/greg.bib
+++ b/writing/Cubert/greg.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Greg Scontras at 2015-05-12 09:28:01 -0700 
+%% Created for Greg Scontras at 2015-06-15 15:56:14 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@incollection{grice1975,
+	Address = {New York},
+	Author = {H. P. Grice},
+	Booktitle = {Syntax and Semantics 3: Speech acts},
+	Date-Added = {2015-06-15 21:59:20 +0000},
+	Date-Modified = {2015-06-15 22:27:40 +0000},
+	Editor = {Peter Cole and Jerry L. Morgan},
+	Pages = {41-58li},
+	Publisher = {Academic Press},
+	Title = {Logic and Conversation},
+	Year = {1975}}
 
 @article{lassitergoodman2015,
 	Author = {Daniel Lassiter and Noah D. Goodman},
@@ -25,7 +37,8 @@
 	Date-Modified = {2015-05-05 18:37:21 +0000},
 	Title = {\emph{Google Books Corpus}. ({B}ased on {G}oogle {B}ooks n-grams)},
 	Url = {http://googlebooks.byu.edu/},
-	Year = {2011--}}
+	Year = {2011--},
+	Bdsk-Url-1 = {http://googlebooks.byu.edu/}}
 
 @article{piantadosietal2012,
 	Author = {Steven T. Piantadosi and Harry Tily and Edward Gibson},
@@ -2659,11 +2672,13 @@
 	Author = {Godehard Link},
 	Booktitle = {Plurality and Quantification},
 	Date-Added = {2014-09-19 17:41:00 +0000},
-	Date-Modified = {2014-09-19 17:47:29 +0000},
+	Date-Modified = {2015-06-15 22:56:12 +0000},
 	Editor = {F. Hamm and E. Hinrichs},
 	Pages = {19-54},
-	Publisher = {Kluwer Academic Publishers},
-	Title = {Ten Years of Research on Plurals -- Where Do We Stand?},
+	Publisher = {Springer Netherlands},
+	Series = {Studies in Linguistics and Philosophy},
+	Title = {Ten Years of Research on Plurals -- {W}here Do We Stand?},
+	Volume = {69},
 	Year = {1998}}
 
 @article{ariely2001,
