--- a/writing/Cubert/greg.bib
+++ b/writing/Cubert/greg.bib
@@ -2,12 +2,71 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Greg Scontras at 2015-06-24 08:58:07 -0700 
+%% Created for Greg Scontras at 2015-08-25 16:05:54 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{gilbert2013,
+	Address = {New York},
+	Author = {Margaret P. Gilbert},
+	Date-Added = {2015-08-25 23:05:09 +0000},
+	Date-Modified = {2015-08-25 23:05:54 +0000},
+	Publisher = {Oxford University Press},
+	Title = {Joint Commitment: How We Make the Social World},
+	Year = {2013}}
+
+@article{lasersohn1998,
+	Author = {Peter Lasersohn},
+	Date-Added = {2015-08-25 22:59:10 +0000},
+	Date-Modified = {2015-08-25 22:59:37 +0000},
+	Journal = {Linguistics and Philosophy},
+	Pages = {83-93},
+	Title = {Generalized Distributivity Operators},
+	Volume = {21},
+	Year = {1998}}
+
+@article{lasersohn1990,
+	Author = {Peter Lasersohn},
+	Date-Added = {2015-08-25 22:58:29 +0000},
+	Date-Modified = {2015-08-25 22:59:03 +0000},
+	Journal = {Linguistics and Philosophy},
+	Pages = {179-206},
+	Title = {Group action and spatio-temporal proximity},
+	Volume = {13},
+	Year = {1990}}
+
+@phdthesis{lasersohn1988,
+	Author = {Peter Lasersohn},
+	Date-Added = {2015-08-25 22:57:43 +0000},
+	Date-Modified = {2015-08-25 22:58:22 +0000},
+	School = {The Ohio State University},
+	Title = {A semantics for groups and events},
+	Year = {1988}}
+
+@incollection{landman1996,
+	Address = {Oxford},
+	Author = {Fred Landman},
+	Booktitle = {Handbook of Contemporary Semantics},
+	Date-Added = {2015-08-25 22:55:55 +0000},
+	Date-Modified = {2015-08-25 22:56:43 +0000},
+	Editor = {S. Lappin},
+	Pages = {425-457},
+	Publisher = {Blackwell},
+	Title = {Plurality},
+	Year = {1996}}
+
+@article{landman1989b,
+	Author = {Fred Landman},
+	Date-Added = {2015-08-25 22:55:16 +0000},
+	Date-Modified = {2015-08-25 22:55:48 +0000},
+	Journal = {Linguistics and Philosophy},
+	Pages = {723-744},
+	Title = {Groups {II}},
+	Volume = {12},
+	Year = {1989}}
 
 @incollection{grice1975,
 	Address = {New York},
@@ -3414,9 +3473,10 @@
 	Year = {2002}}
 
 @book{schwarzschild1996,
+	Address = {Dordrecht},
 	Author = {Roger Schwarzschild},
 	Date-Added = {2013-11-08 13:52:49 +0000},
-	Date-Modified = {2013-11-08 13:53:19 +0000},
+	Date-Modified = {2015-08-25 23:02:03 +0000},
 	Publisher = {Kluwer Academic Publishers},
 	Title = {Pluralities},
 	Year = {1996}}
